[gd_scene load_steps=6 format=3 uid="uid://bwutqlxx740da"]

[ext_resource type="Texture2D" uid="uid://c4jaacrk77ukx" path="res://UserInterface/Assets/nineslice_background.png" id="1_5eqk4"]
[ext_resource type="Texture2D" uid="uid://binjos5vvsans" path="res://UserInterface/Assets/nineslice_background_highlighted.png" id="1_smrpt"]
[ext_resource type="Script" path="res://UserInterface/Interactions/interaction_preview.gd" id="2_0h3se"]
[ext_resource type="Texture2D" uid="uid://tfh3mfxd47ie" path="res://Interactions/Assets/Icons/chat_icon.png" id="3_csvyj"]
[ext_resource type="Theme" uid="uid://dfokevhqjjrs8" path="res://UserInterface/Themes/pixel_theme.tres" id="4_qpcn4"]

[node name="InteractionPreview" type="NinePatchRect"]
custom_minimum_size = Vector2(140, 24)
offset_right = 140.0
offset_bottom = 24.0
texture = ExtResource("1_5eqk4")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource("2_0h3se")

[node name="SelectionHighlight" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_smrpt")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InteractionTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_csvyj")
stretch_mode = 3

[node name="InteractionText" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme = ExtResource("4_qpcn4")
text = "<Interaction>"
vertical_alignment = 1
clip_text = true
